<resources>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="preference_access_token" translatable="false">preference_access_token</string>
    <string name="preference_is_service_check" translatable="false">preference_is_service_check</string>
    <string name="preference_language_key" translatable="false">preference_language_key</string>
    <string name="preference_device_id" translatable="false">preference_device_id</string>
    <string name="preference_temp_history" translatable="false">preference_temp_history</string>
    <string name="preference_printer_name" translatable="false">preference_printer_name</string>
    <string name="preference_printer_address" translatable="false">preference_printer_address</string>
    <string name="preference_dc_dr" translatable="false">preference_dc_dr</string>
    <string name="preference_user_name" translatable="false">preference_user_name</string>
    <string name="preference_user_id" translatable="false">preference_user_id</string>
    <string name="preference_operator_name" translatable="false">preference_operator_name</string>
    <string name="preference_customer_support" translatable="false">preference_customer_support</string>
    <string name="preference_account_no" translatable="false">preference_account_no</string>
    <string name="preference_customer_code" translatable="false">preference_customer_code</string>
    <string name="preference_meter_serial" translatable="false">preference_meter_serial</string>
    <string name="preference_card_idm" translatable="false">preference_card_idm</string>
    <string name="preference_meter_type_id" translatable="false">preference_meter_type_id</string>
    <string name="preference_card_status" translatable="false">preference_card_status</string>
    <string name="preference_prepaid_code" translatable="false">preference_prepaid_code</string>
    <string name="preference_payment_id" translatable="false">preference_payment_id</string>
    <string name="preference_cancel_failed" translatable="false">preference_cancel_failed</string>
    <string name="preference_capture_failed" translatable="false">preference_capture_failed</string>
    <string name="app_name" translatable="false">HitPos-V.2</string>
    <string name="welcome">Welcome to KGDCL PGM Point of sale</string>
    <string name="language_change">Language Change Page</string>
    <string name="select">Select language</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="email">Enter your Email</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Password field required</string>
    <string name="err_msg_password_length">Password too short</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="msg_no_invoice_found">No Infvoice found</string>
    <string name="select_charge">料金を選択してください</string>
    <string name="service_charge">Service charge</string>
    <string name="nfc_check">Please tap the Service card</string>
    <string name="menu">Menu</string>
    <string name="readcard">Card Read</string>
    <string name="accountserch">Account Search</string>
    <string name="report">Reports</string>
    <string name="language">Language Settings</string>
    <string name="inspect_card">Inspect Card</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="operator">Operator Settings</string>
    <string name="api">API Set Up</string>
    <string name="device">Device/Printer Settings</string>
    <string name="company">Company Settings</string>
    <string name="other">Other</string>
    <string name="pos">Pos Sales By Time</string>
    <string name="gas">Gas Sales By Time</string>
    <string name="cName">Customer Name</string>
    <string name="cID">Customer ID</string>
    <string name="cACNO">Customer Ac NO</string>
    <string name="ccNO">Customer C NO</string>
    <string name="search">Search</string>
    <string name="cardproperties">Card Properties</string>
    <string name="cardHistory">Card History</string>
    <string name="carderrorHistory">Error History</string>
    <string name="textcustomer">Customer Details</string>
    <string name="textcustomerACID">Ac ID: </string>
    <string name="textcustomerACNO">Ac NO: </string>
    <string name="textcustomerinfo">Customer Info</string>
    <string name="transection">Transaction</string>
    <string name="subscription">Subscription</string>
    <string name="cardinfo">Card</string>
    <string name="meterinfo">Meter</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="after_select_charge">After select the charge then tab NFC Card</string>
    <string name="gas_recharge">Gas Recharge</string>
    <string name="selected_charge">This Charge is Selected</string>
    <string name="refund">Refund</string>
    <string name="sales_history">Sales History</string>
    <string name="invoice_card">Invoice Card</string>
    <string name="err_msg_required">Required*</string>
    <string name="label_change_language">Change language</string>
    <string name="label_english" translatable="false">English</string>
    <string name="label_bangla" translatable="false">বাংলা</string>
    <string name="label_japanese" translatable="false">日本人</string>
    <string name="receipt_print_date_time">Date and Time</string>
    <string name="receipt_print_prepaid_no">Prepaid No</string>
    <string name="receipt_print_card">Card No</string>
    <string name="receipt_print_deposit_ammount">Deposit Amount(TK)</string>
    <string name="receipt_print_previous_balance">Previous Balance(TK)</string>
    <string name="receipt_print_current_balance">Current Balance(TK)</string>
    <string name="receipt_print_meter_rent">Meter Rent(TK)</string>
    <string name="receipt_print_other_charge">Other Charge(TK)</string>
    <string name="receipt_print_gas_charge">Gas Charge(TK)</string>
    <string name="receipt_print_gas_volume">Gas Volume(m3)</string>
    <string name="pos_key_invalid">POSKey Invalid</string>
    <string name="titlle_dashboard">Dashboard</string>
    <string name="add_gas">Add Gas</string>
    <string name="invoice">Invoice</string>
    <string name="properties">PROPERTIES</string>
    <string name="history">HISTORY</string>
    <string name="error">ERROR</string>
    <string name="customer">CUSTOMER</string>
    <string name="meter">METER</string>
    <string name="card">CARD</string>
    <string name="transactionModels">TRANSACTIONS</string>
    <string name="subscriptions">SUBSCRIPTIONS</string>
    <string name="account_list">Account List</string>
    <string name="label_card_no">Card no</string>
    <string name="label_erp_code">ERP code</string>
    <string name="label_meter_serial">Meter serial</string>
    <string name="label_group">Group :</string>
    <string name="label_type">Type :</string>
    <string name="label_meter_type">Meter type</string>
    <string name="label_status">Status</string>
    <string name="label_tariff_id">Tariff ID</string>
    <string name="label_tariff">Tariff</string>
    <string name="label_pending_invoice">Pending invoice</string>
    <string name="label_installation_date">Installation date</string>
    <string name="label_item_no">Item no</string>
    <string name="label_cycle">Cycle</string>
    <string name="lable_status">Status</string>
    <string name="label_invoice_type">Invoice type</string>
    <string name="label_price">Price</string>
    <string name="label_percentage">Percentage</string>
    <string name="label_description">Description</string>
    <string name="label_payment_date">Payment date</string>
    <string name="label_account_no">Prepaid Code</string>
    <string name="label_house">House</string>
    <string name="label_road">Rood</string>
    <string name="label_block">Block</string>
    <string name="label_sector">Sector</string>
    <string name="label_section">Section</string>
    <string name="label_zip_code">Zip code</string>
    <string name="label_metro_id">Metro ID</string>
    <string name="label_zone_id">Zone ID</string>
    <string name="label_area_id">Area ID</string>
    <string name="label_sub_area">Sub area</string>
    <string name="label_title">Title</string>
    <string name="label_postal_code">Postal code</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_full_name">Full name</string>
    <string name="label_email">Email</string>
    <string name="label_mobile_number">Mobile number</string>
    <string name="label_identity_no">Identity no</string>
    <string name="label_balance">Balance</string>
    <string name="label_status_id">Status ID</string>
    <string name="lablel_status">Status</string>
    <string name="label_inspect_card">Inspect Card</string>
    <string name="label_card_refund">Refund Gas</string>
    <string name="label_sales_history">Sales History</string>
    <string name="label_please_tag_the">Please tap the</string>
    <string name="label_user">User</string>
    <string name="label_card">card</string>
    <string name="label_select_amount">Select Amount</string>
    <string name="label_amount">Amount</string>
    <string name="label_gas_volume_m3">Gas volume(m3)</string>
    <string name="label_tax_amount">Tax Amount</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_tk">TK</string>
    <string name="label_submit">Submit</string>
    <string name="label_print_script">Print Script</string>
    <string name="label_print">Re-Print</string>
    <string-array name="price_list">
        <item>100 TK</item>
        <item>200 TK</item>
        <item>300 TK</item>
        <item>400 TK</item>
        <item>=500 TK</item>
        <item>Manual</item>
    </string-array>
    <string name="label_customer_code">Customer code</string>
    <string name="label_zone">Zone</string>
    <string name="label_cardno">Card No</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>
    <string name="label_area">Area</string>
    <string name="label_apartment">Apartment</string>
    <string name="label_metro">Metro</string>
    <string name="label_search">Search</string>
    <string name="label_add_gas">Recharge Gas</string>
    <string name="label_account_search">Search Customer</string>
    <string name="label_meter_serial_no">Meter Serial No</string>
    <string name="title_settings">Settings</string>
    <string name="title_sales_history">Sales History</string>
    <string name="label_find_device">Server setup</string>
    <string name="label_anguage">Language</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_copyright" translatable="false">TOYOKEIKI Co., LTD &#169; 2019 All Rights Reserved </string>
    <string name="title_select_amount">Select amount</string>
    <string name="success">Success</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="err">Error</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="err_service_card">It is not Service Card</string>
    <string name="err_card_read_failed">Card read failed! Please try again</string>
    <string name="err_card_not_valid">This card is invalid for this operation</string>
    <string name="info_want_to_logout">Are you sure you want to log out ?</string>
    <string name="cancel">Cancel</string>
    <string name="warning_delete_card">Are you sure you want to Delete card?</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="account_no">Prepaid Code</string>
</resources>